# EbaDataset

./: .gitignore  docker-compose.yml  package-lock.json  pyproject.toml
deamon/: base.py  client.py  results.py  server.py  tracker.py  watcher.py
eba_file_tracker/: README.md  pyproject.toml  requirements.txt
eba_file_tracker/eba_file_tracker/: __init__.py  client.py  response.py  server.py
eba_file_tracker/eba_file_tracker/core/: tracker.py
eba_file_tracker/eba_file_tracker/core/communication/: system.py
eba_file_tracker/eba_file_tracker/core/models/: base.py  command.py  result.py  tracker.py
eba_file_tracker/eba_file_tracker/var/: .env
file_tracker/: pyproject.toml
file_tracker/file_tracker/: __init__.py  client.py  response.py  server.py
file_tracker/file_tracker/core/models/: server.py
file_tracker/file_tracker/var/: .env
file_tracker/src/: client.py  response.py  server.py
file_tracker/src/core/: model.py  tracker.py  transfer.py
file_tracker/src/core/communication/: json_transfer.py  system.py
file_tracker/src/core/models/: command.py  tracker.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  app.scss  const.ts  index.css  main.tsx
frontend/src/context/: toastContext.tsx
frontend/src/enums/: apiRoute.ts
frontend/src/pages/: homePage.tsx  linkPage.tsx  mainPage.tsx
frontend/src/service/: productService.ts
frontend/src/services/: api.ts  linkService.ts  process-error-handle.ts  productService.ts
frontend/src/store/: api-actions.ts  index.ts  slice.ts
frontend/src/types/: datasetTypes.ts  link.ts  message.ts  resource.ts
main_server/: .gitignore  Dockerfile
main_server/app/: main.py  models.py
main_server/app/api/: api_router.py
main_server/app/core/: config.py  db_utils.py  repository.py
main_server/app/schemas/: requests.py  responses.py
test/: jopa.csv
(+22 files in other folders)
